5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1637_2445.log
== TEST (2019-04-11 10:29:50) 
-- CODE:
esc = input("Digite aqui a escala da temperatura: ")

T = float("Digite aqui a temperatura: ")

C = 5 / 9 * T - 32

F = ((T * 9) / 5) + 32

if(esc.upper() == "F"):
	msg = C
else:
	msg = F
	
print(msg)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    T = float("Digite aqui a temperatura: ")
ValueError: could not convert string to float: 'Digite aqui a temperatura: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:30:14) 
-- CODE:
esc = input("Digite aqui a escala da temperatura: ")

T = float("Digite aqui a temperatura: ")

C = 5 / 9 * T - 32

F = ((T * 9) / 5) + 32

if(esc.upper() == "F"):
	msg = C
else:
	msg = F
	
print(round(msg, 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    T = float("Digite aqui a temperatura: ")
ValueError: could not convert string to float: 'Digite aqui a temperatura: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:30:32) 
-- CODE:
esc = input("Digite aqui a escala da temperatura: ")

T = float("Digite aqui a temperatura: ")

C = 5 / 9 * T - 32

F = ((T * 9) / 5) + 32

if(esc.upper() == "F"):
	msg = C
else:
	msg = F
	
print(round(msg, 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    T = float("Digite aqui a temperatura: ")
ValueError: could not convert string to float: 'Digite aqui a temperatura: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:31:10) 
-- CODE:
esc = input("Digite aqui a escala da temperatura: ")

T = float(input("Digite aqui a temperatura: "))

C = 5 / 9 * T - 32

F = ((T * 9) / 5) + 32

if(esc.upper() == "F"):
	msg = C
else:
	msg = F
	
print(round(msg, 2))


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:31:31) 
-- CODE:
esc = input("Digite aqui a escala da temperatura: ")

T = float(input("Digite aqui a temperatura: "))

C = 5 / 9 * T - 32

F = ((T * 9) / 5) + 32

if(esc.upper() == "F"):
	msg = C
else:
	msg = F
	
print(round(msg, 2))


-- EXECUTION TIME:
0.212587
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
145.78
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:31:36) 
-- CODE:
esc = input("Digite aqui a escala da temperatura: ")

T = float(input("Digite aqui a temperatura: "))

C = 5 / 9 * T - 32

F = ((T * 9) / 5) + 32

if(esc.upper() == "F"):
	msg = C
else:
	msg = F
	
print(round(msg, 2))


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:31:58) 
-- CODE:
esc = input("Digite aqui a escala da temperatura: ")

T = float(input("Digite aqui a temperatura: "))

C = 5 / 9 * T - 32

F = ((T * 9) / 5) + 32

if(esc.upper() == "F"):
	msg = C
else:
	msg = F
	
print(round(msg, 2))


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:33:04) 
-- CODE:
esc = input("Digite aqui a escala da temperatura: ")

T = float(input("Digite aqui a temperatura: "))

C = 5 / 9 * T - 32

F = ((T * 9) / 5) + 32

if(esc.upper() == "F"):
	msg = C
if(esc.upper() == "C")
	msg = F
	
print(round(msg, 2))


-- ERROR:
File "XXXX", line 11
    if(esc.upper() == "C")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:34:49) 
-- CODE:
esc = input("Digite aqui a escala da temperatura: ")

T = float(input("Digite aqui a temperatura: "))

C = 5 / 9 * T - 32

F = ((T * 9) / 5) + 32

if(esc.upper() == "F"):
	msg = C
if(esc.upper() == "C"):
	msg = F
	
print(round(msg, 2))


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:34:59) 
-- CODE:
esc = input("Digite aqui a escala da temperatura: ")

T = float(input("Digite aqui a temperatura: "))

C = 5 / 9 * T - 32

F = ((T * 9) / 5) + 32

if(esc.upper() == "F"):
	msg = C
if(esc.upper() == "C"):
	msg = F
	
print(round(msg, 2))


-- EXECUTION TIME:
0.160501
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
145.78
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:35:15) 
-- CODE:
esc = input("Digite aqui a escala da temperatura: ")

T = float(input("Digite aqui a temperatura: "))

C = 5 / 9 * T - 32

F = ((T * 9) / 5) + 32

if(esc.upper() == "F"):
	msg = C
if(esc.upper() == "C"):
	msg = F
	
print(round(msg, 2))


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:36:57) 
-- CODE:
esc = input("Digite aqui a escala da temperatura: ")

T = float(input("Digite aqui a temperatura: "))

c = 5 / 9 * T - 32

f = (T * (9 / 5)) + 32

if(esc.upper() == "F"):
	msg = c
if(esc.upper() == "C"):
	msg = f
	
print(round(msg, 2))


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:37:54) 
-- CODE:
esc = input("Digite aqui a escala da temperatura: ")

T = float(input("Digite aqui a temperatura: "))

c = (5 / 9) * (T - 32)

f = (T * (9 / 5)) + 32

if(esc.upper() == "F"):
	msg = c
if(esc.upper() == "C"):
	msg = f
	
print(round(msg, 2))


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:39:14) 
-- CODE:
esc = input("Digite aqui a escala da temperatura: ")

T = float(input("Digite aqui a temperatura: "))

c = (5 / 9) * (T - 32)

f = T * (9 / 5) + 32

if(esc.upper() == "F"):
	msg = c
if(esc.upper() == "C"):
	msg = f
	
print(round(msg, 2))


-- EXECUTION TIME:
0.167417
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
